[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Bristol1350"
version = "0.1.1"
description = "Python implementation of Bristol 1350"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "*"
colorama = "*"
tkinter = "*"
twilio = "*"

[tool.poetry.dev-dependencies]

[project.scripts]
bristol = "bristol.game:main"
